aKregator ChangeLog
===================
(c) 2004 the aKregator authors.

Changes after 1.0b5:
-----------------------------
Changes:
#82187 - Improved session management: save search settings, selected Feed and Article -fo
       - Make it possible to switch notifications off -tpr

Bug Fixes:
#83995 - Don't crash when exiting KDE -fo 
#82791 - Save the toolbar position -tpr
       - Don't crash when there is no part available -tpr
       - Make tabs wider when there is free space available -tpr

Changes after 1.0b4:
-----------------------------

Changes:
       - Load last loaded feed list in kontact plugin (#84351) - smt
       - Show regular akregator icon in tray if there are no unread articles. Based on patch from cartman. -berkus
       - Implement session mangement (#82868) - smt

Bug Fixes:
#84095 - akregator article view doesn't display <pre> passages correctly -berkus
#82820 - Kontact crashes when fetching - smt
#84272 - aKregator doesn't restore feed list after logout with running application
#81995 - Don't crash when changing from/to combined view when folder selected -tpr
#82024 - Fix drag&drop regression which made it possible have multiple top level folders -sg
#84471 - Fix sorting of articles with no pubDates - smt
#83102 - Fix handling of non-HTML web pages - smt
#83187 - Reset scrollbar while switching feeds in combined view - smt

Changes after 1.0b3:
-----------------------------

New Features:
#82023 - Added middle mouse button option to open tabs in background -tpr
#83202 - "Clear" button for search string -berkus
       - Per feed interval fetching -smt
       - Konqueror plugin for adding feeds to aKregator from context menu -PhantomsDad
       - Command line options for adding feeds -PhantomsDad
       - In case the feed doesn't provide an article <link> element, fall back to the <guid> permaLink -sg
       
Bug Fixes:
       - Update interval spinbox should be disabled if the checkbox isn't checked -tpr